# gfzs

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
fixtures/: python.json  rust.json  tokyo.json
gfzs/: __init__.py  __main__.py  box_selector.py  cli.py  colors.py  config.py  controller.py  footer.py  header.py  info.py  markup.py  model.py  multibyte.py  not_found.py  tty.py
gfzs/cmd/: __init__.py  demo.py  edit.py  init.py  valid.py
gfzs/config/: app.py  runtime.py
gfzs/runtime/: __init__.py  config.py  opts.py
gfzs/utils/: color.py  debug.py  logger.py  markup.py  multibyte.py  text_wrapper.py
gfzs/views/: base.py  box_selector.py  footer.py  header.py  not_found.py  paging.py  search_result.py
src/: box_selector.py  colors.py  controller.py  debug.py  footer.py  header.py  markup.py  model.py  multibyte.py  not_found.py  paging.py  view.py
