[tool.poetry]
name = "gfzs"
version = "0.1.0"
description = "Google Fuzzy Search"
authors = ["yukihirop <te108186@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
twine = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
